fixed layout of view header

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ li {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 4px 20px 0px 20px;
+  padding: 0px 20px 4px 20px;
 }
 
 li:hover {
@@ -140,15 +140,26 @@ li.active {
   scroll-padding: 15vh;
 }
 
+#view-header-actions {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  padding-left: 15px;
+}
+
 #view-header {
   flex-grow: 1;
   font-size: 1.3em;
-  margin: 30px 0 20px 0;
+  margin: 0;
   font-weight: normal;
 }
 
+#view-content {
+  padding: 30px 0;
+}
+
 .clipping {
-  padding-left: 15px;
+  padding-left: 10px;
   border-left: 5px solid;
   border-color: white;
 }
@@ -176,7 +187,7 @@ button {
 }
 
 #view-actions {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 #view-actions button {
